--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://imagedelivery.net/LBWXYQ-XnKSYxbZ-NuYGqQ/6181fe4e-bde2-4fbf-fa97-5a13d646ec00/avatarhd" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saving your tenure out here</title>
+    <title>Silly Editor</title>
   </head>
   <body>
     <div id="root"></div>
